--- a/terminal.html
+++ b/terminal.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Fake Ubuntu Terminal</title>
+  <title>Ubuntu Terminal</title>
   <style>
     * {margin: 0; padding: 0; box-sizing: border-box;}
     body {background-color: #2c001e; font-family: 'Ubuntu Mono', monospace; display: flex; align-items: center; justify-content: center; height: 100vh;}
